Add missing fields to UserPrincipal